<resources>
    <plurals name="confirm_delete_tank">
        <item quantity="one">Are you sure you wish to delete the tank and all data?</item>
        <item quantity="other">Are you sure you wish to delete these tanks and their data?</item>
    </plurals>
    <plurals name="tanks_deleted">
        <item quantity="one">1 tank deleted.</item>
        <item quantity="other">%d tanks deleted.</item>
    </plurals>
    <plurals name="confirm_delete_readings">
        <item quantity="one">Are you sure you wish to delete the readings and all data?</item>
        <item quantity="other">Are you sure you wish to delete these readings and their data?</item>
    </plurals>
    <plurals name="readings_deleted">
        <item quantity="one">1 reading deleted.</item>
        <item quantity="other">%d readings deleted.</item>
    </plurals>

    <string name="default_tank_title">Loading tank</string>
    <string name="default_tank_info">Loading</string>
    <string name="no_tanks_yet">No Tanks Yet</string>
    <string name="delete">Delete</string>


    <string name="app_name">Tank Manager</string>
    <string name="remove_tank">Remove tank</string>
    <string name="remove_readings">Remove readings</string>
    <string name="search">Search</string>
    <string name="no_tanks_found">No tanks found</string>
    <string name="tank_default_title">My Tank</string>
    <string name="tank_default_size">300</string>
    <string name="tank_default_size_unit">Litres</string>
    <string name="tank_default_type">Marine</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard">Discard</string>
    <string name="last_maintenance">Last Maintenance:</string>
    <string name="next_water_change">Next water change:</string>
    <string name="next_task">Next task:</string>
    <string name="failed_to_load">Failed to load information</string>
    <string name="no_maintenance_done">No maintenance done</string>
    <string name="no_scheduled_water_changes">No water changes scheduled</string>
    <string name="no_scheduled_maintenance">No maintenance scheduled</string>

    <!--  The order needs to be the same as the enum order  -->
    <string name="title_activity_maintenance">MaintenanceActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="readings_fragment_tab_text">Readings</string>
    <string name="maintenace_history_tab_text">Maintenance</string>
    <string name="equipment_fragment_tab_name">Equipment</string>
    <string name="add_reading_button_text">Add Reading</string>
    <string name="zero">0</string>
    <string name="ammonia_with_unit">Ammonia (PPM)</string>
    <string name="ph_with_unit">PH</string>
    <string name="nitrite_with_unit">Nitrite (PPM)</string>
    <string name="nitrate_with_unit">Nitrate (PPM)</string>
    <string name="kh_with_unit">KH</string>
    <string name="gh_with_unit">GH</string>
    <string name="salinity_with_unit">Salinity</string>
    <string name="phosphate_with_unit">Phosphate (PPM)</string>
    <string name="iron_with_unit">Iron (PPM)</string>
    <string name="copper_with_unit">Copper (PPM)</string>
    <string name="magnesium_with_unit">Magnesium (PPM)</string>
    <string name="calcium_with_unit">Calcium (PPM)</string>
    <string name="co2_with_unit">CO2</string>
    <string name="o2_with_unit">O2</string>
    <string name="ammonia_unit">PPM</string>
    <string name="ammonia_without_unit">Ammonia</string>
    <string name="ph_without_unit">PH</string>
    <string name="nitrite_unit">PPM</string>
    <string name="nitrite_without_unit">Nitrite</string>
    <string name="nitrate_unit">PPM</string>
    <string name="nitrate_without_unit">Nitrate</string>
    <string name="kh_without_unit">KH</string>
    <string name="gh_without_unit">GH</string>
    <string name="salinity_without_unit">Salinity</string>
    <string name="phosphate_unit">PPM</string>
    <string name="phosphate_without_unit">Phosphate</string>
    <string name="iron_unit">PPM</string>
    <string name="iron_without_unit">Iron</string>
    <string name="copper_unit">PPM</string>
    <string name="copper_without_unit">Copper</string>
    <string name="magnesium_unit">PPM</string>
    <string name="magnesium_without_unit">Magnesium</string>
    <string name="calcium_unit">PPM</string>
    <string name="calcium_without_unit">Calcium</string>
    <string name="co2_without_unit">CO2</string>
    <string name="o2_without_unit">O2</string>
    <string name="no_readings_yet">No readings yet</string>
    <string name="date_taken">Date Taken</string>
    <string name="date_taken_placeholder">Date: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="tank_types_array">
        <item>Marine</item>
        <item>Cold water</item>
        <item>Pond</item>
        <item>Tropical</item>
        <item>Brackish</item>
        <item>Other</item>
    </string-array>

</resources>
