<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_reading_height"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_taken_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ammonia_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ammonia_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/ammonia_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ammonia_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/ammonia_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ammonia_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ph_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ph_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="100"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/ph_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nitrite_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nitrite_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/nitrite_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nitrite_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/nitrite_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nitrite_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nitrate_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nitrate_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/nitrate_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nitrate_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/nitrate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nitrate_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/kh_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kh_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/kh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kh_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gh_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gh_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/gh_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gh_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/salinity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/salinity_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1.002"
                    android:textAlignment="center"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/salinity_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salinity_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phosphate_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phosphate_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/phosphate_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phosphate_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/phosphate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phosphate_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/iron_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/iron_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/iron_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/iron_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/iron_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iron_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/copper_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/copper_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/copper_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/copper_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/copper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copper_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/magnesium_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/magnesium_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/magnesium_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/magnesium_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/magnesium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/magnesium_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calcium_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calcium_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAlignment="textEnd"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/calcium_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calcium_unit"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/calcium_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcium_without_unit"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/co2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/co2_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/co2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/co2_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/o2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/o2_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/o2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/o2_without_unit"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>